Improved parallax + UI

--- a/ParallaxV1/index.html
+++ b/ParallaxV1/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-	<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:400,600,700|Rosario:400italic,400,700italic,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:400,600,700|Rosario:400italic,400,700italic,700|Open+Sans:100,300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	<title>DiPi Portal</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
@@ -18,8 +18,7 @@
 <body>
 
 	<nav>
-		<h1>DiPi History Project</h1>
-
+		<h1><a href="#" id="title">DiPi History Project</a></h1>
 		<ul>
 			<li><a href="#" id="itc">ITC</li>
 			<li><a href="#" id="health">Health</li>
@@ -27,15 +26,18 @@
 			<li><a href="#" id="cdev">Community Design</a></li>
 		</ul>
 	</nav>
-
+	
 		
-	<section id="parallax">
-		<hr>
-
-		<img id="first" class="parallaxSec" src="images/community_design.png"/>
-		<img id="second" class="parallaxSec" src="images/youth_development.png"/>
-		<img id="third" class="parallaxSec" src="images/health.png"/>
-		<img id="fourth" class="parallaxSec" src="images/itc_development.png"/>
+	<section id="parallax">		
+		<div id="home" class="parallaxSec">		
+			<p>What do we do?</p>
+		</div>
+		<img id="first" class="parallaxSec" src="images/community_design3.png"/>
+		<img id="second" class="parallaxSec" src="images/youth_development3.png"/>
+		<img id="third" class="parallaxSec" src="images/health2.png"/>
+		<img id="fourth" class="parallaxSec" src="images/itc2.png"/>
+		<footer>
+		</footer>	
 	
 	</section>
 
