--- a/ParallaxV1/index.html
+++ b/ParallaxV1/index.html
@@ -24,19 +24,46 @@
 			<li><a href="#" id="health">Health</li>
 			<li><a href="#" id="ydev">Youth Development</a></li>
 			<li><a href="#" id="cdev">Community Design</a></li>
+			<li><a href="#" id="info">details</a></li>
 		</ul>
 	</nav>
 	
 		
 	<section id="parallax">		
-		<div id="home" class="parallaxSec">		
-			<p>What do we do?</p>
+		<div id="home" class="parallaxSec">	
+			<h1>INTRO</h1>	
+			<div class="column">
+				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, ngilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc
+			</div>
 		</div>
 		<img id="first" class="parallaxSec" src="images/community_design3.png"/>
 		<img id="second" class="parallaxSec" src="images/youth_development3.png"/>
 		<img id="third" class="parallaxSec" src="images/health2.png"/>
 		<img id="fourth" class="parallaxSec" src="images/itc2.png"/>
+
+
+		<div id="popupDiv" class="parallaxSec">
+			<div id="col1" class="column">
+				<h4 class="name">Name</h4>
+				<h6>1960-1980</h6>
+				<h6>Field 1, Field 2, etc</h6>
+			</div>
+			
+			<div id="col2" class="column">
+				<h4>Work</h4>
+				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+				<h4>Projects</h4>
+				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+			</div>
+
+			<div id="col3" class="column">
+				<h4>Influences</h4>
+				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+			</div>
+			
+		</div>
 		<footer>
+			<!-- Copyright 2014 -->
 		</footer>	
 	
 	</section>
