Reorganize file structure

--- a/Mockups/ParallaxV1/crdIndex.html
+++ b/Mockups/ParallaxV1/crdIndex.html
@@ -7,9 +7,9 @@
 	<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:400,600,700|Rosario:400italic,400,700italic,700|Open+Sans:100,300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	<title>Index</title>
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="crdIndex.css">
 
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="crdIndex.js"></script>
 
 
 	<meta charset="utf-8"> 
@@ -27,14 +27,61 @@
 			<li><a href="#" id="index">index</li>
 			<li></li>
 			<li></li>
-			<li><a href="index.html" id="home">home</li>
+			<li><a href="index.html" id="home">home</a></li>
 
 		</ul>
 	</nav>
 	
 		
-	<section id="wrapper">		
-		
+	<section id="wrapper">
+		<div id="content">
+			
+			<div class="column">
+				<h4>People</h4>
+				<ul>
+					<li>Saul Alinsky</li>
+					<li>Saul Alinsky</li>
+					<li>Saul Alinsky</li>
+					<li>Saul Alinsky</li>
+					<li>Saul Alinsky</li>
+					<li>Saul Alinsky</li>
+					<li>Saul Alinsky</li>
+					<li>Saul Alinsky</li>
+					<li>Saul Alinsky</li>
+				</ul>
+				
+			</div>
+			
+			<div class="column">
+				<h4>Organizations</h4>
+				<ul>
+					<li>CRD</li>
+					<li>CRD</li>
+					<li>CRD</li>
+					<li>CRD</li>
+					<li>CRD</li>
+					<li>CRD</li>
+					<li>CRD</li>
+					<li>CRD</li>
+				</ul>
+			</div>
+
+			<div class="column">
+				<h4>Projects</h4>
+				<ul>
+					<li>Project</li>
+					<li>Project</li>
+					<li>Project</li>
+					<li>Project</li>
+					<li>Project</li>
+					<li>Project</li>
+					<li>Project</li>
+					<li>Project</li>
+					<li>Project</li>
+				</ul>
+			</div>
+
+		</div>
 
 		<div id="popupDiv" class="parallaxSec">
 			<div id="col1" class="column">
@@ -58,9 +105,9 @@
 			</div>
 			
 		</div>
-		<footer>
-			<!-- Copyright 2014 -->
-		</footer>	
+<!-- 		<footer>
+			Copyright 2014
+		</footer> -->	
 	
 	</section>
 
