--- a/Sandbox/SVGV1/index.html
+++ b/Sandbox/SVGV1/index.html
@@ -49,7 +49,7 @@
 			<div id="col1" class="column">
 				<h4 class="name">Saul Alinsky</h4>
 				<h6>1960s to 1990's</h6>
-				<h6>Community Development</h6>
+				<h6>Community Design</h6>
 				<br>
 				<!-- <a href="/images/timeline_sample.pdf" download="newfilename">Resume</a> -->
 			</div>
