Fixed index page dynamic content
Added JSON parsing for dynamic content for people

--- a/Mockups/ParallaxV1/crdIndex.html
+++ b/Mockups/ParallaxV1/crdIndex.html
@@ -24,7 +24,6 @@
 			<li><a href="#" id="about">about</li>
 			<li><a href="#" id="resources">resources</li>
 			<li><a href="#" id="glossary">glossary</li>
-			<li><a href="#" id="index">index</li>
 			<li></li>
 			<li></li>
 			<li><a href="index.html" id="home">home</a></li>
@@ -37,71 +36,110 @@
 		<div id="content">
 			
 			<div class="column">
-				<h4>People</h4>
-				<ul>
-					<li>Saul Alinsky</li>
-					<li>Saul Alinsky</li>
-					<li>Saul Alinsky</li>
-					<li>Saul Alinsky</li>
-					<li>Saul Alinsky</li>
-					<li>Saul Alinsky</li>
-					<li>Saul Alinsky</li>
-					<li>Saul Alinsky</li>
-					<li>Saul Alinsky</li>
+<!-- 				<h4>People</h4>
+ -->				<ul>
+					<li class="people" id="arnstein">Sherry Arnstein</li>
+					<li class="people" id="davidoff">Paul Davidoff</li>
+					<li class="people" id="krumholz">Norman Krumholz</li>
+					<li class="people" id="alinsky">Saul Alinsky</li>
+					<li class="people" id="linn">Karl Linn</li>
+					<li class="people" id="halprin">Lawrence Halprin</li>
+					<li class="people" id="curry">Rex Curry</li>
+					<li>Architectural Renewal Committee (ARCH) Harlem</li>
+					<li>Asian Neighborhood Design</li>
+					<li>Association for Community Design Inc</li>
+					<li class="people" id="sanoff">Henry Sanoff</li>
+					<li class="people" id="hester">Randolph Hester</li>
+					<li class="people" id="franci">Mark Francis</li>
+					<li class="people" id="hamdi">Nabeel Hamdi</li>
+					<li class="people" id="hou">Jeffry Hou</li>
+					<li>Pacific Rim Community Design Network</li>
 				</ul>
 				
 			</div>
 			
 			<div class="column">
-				<h4>Organizations</h4>
 				<ul>
-					<li>CRD</li>
-					<li>CRD</li>
-					<li>CRD</li>
-					<li>CRD</li>
-					<li>CRD</li>
-					<li>CRD</li>
-					<li>CRD</li>
-					<li>CRD</li>
+					<li class="people" id="lynch">Kevin Lynch</li>
+					<li class="people" id="hart">Robin Hart</li>
+					<li class="people" id="moore">Robin Moore</li>
+					<li class="people" id="chawla">Louise Chawla</li>
+					<li class="people" id="driskell">David Driskell</li>
+					<li>MIG, Inc</li>
+					<li>Convention on the Rights of the Child</li>
+					<li>Local Agenda 21</li>
+					<li>UNICEF Innocenti Research Center</li>
+					<li>Symposium - "Children Participation"</li>
 				</ul>
 			</div>
 
 			<div class="column">
-				<h4>Projects</h4>
 				<ul>
-					<li>Project</li>
-					<li>Project</li>
-					<li>Project</li>
-					<li>Project</li>
-					<li>Project</li>
-					<li>Project</li>
-					<li>Project</li>
-					<li>Project</li>
-					<li>Project</li>
+					<li class="people" id="freie">Paulo Freie</li>
+					<li class="people" id="chambers">Robert Chambers</li>
+					<li>Inst. of Development Studies, U.Sussex</li>
+					<li>UN Research Inst. for Social Development (UNRISD)</li>
+					<li>World Bank</li>
+					<li>UN Develpment Programme</li>
+					<li>Donor Organizations (USAID, SIDA, DFID)</li>
+					<li>Intl. Council for Adult Education</li>
+					<li>Society for Participatory Research in Asia (PRIA)</li>
+					<li>Self-Employed Women's Associations, India</li>
+					<li>Grameen Bank</li>
+					<li class="people" id="fals-borda">Orlando Fals-Borda</li>
+					<li>Orangi Pilot Project OPP-RTI</li>
+				</ul>
+			</div>
+
+			<div class="column">
+				<ul>
+					<li class="people" id="whyte">William Foote Whyte</li>
+					<li class="people" id="minkler">Meredith Minkler</li>
+					<li class="people" id="wallerstein">Nina Wallerstein</li>
+					<li>Community-Based Participatory Research Program</li>
+					<li>Design Research Society Conference</li>
+					<li>NJMF Project</li>
+					<li>Demos Project</li>
+					<li>DUE Project</li>
+					<li>UTOPIA Project</li>
+					<li>Xerox PARC</li>
+					<li>Florence Project</li>
+					<li>AT Project</li>
+					<li>Computer Professionals for Social Responsibility</li>
+					<li>Participatory Design Conference</li>
+					<li>Public Sphere Project</li>
+					<li class="people" id="ehn">Pelle Ehn</li>
+					<li>Atelier Project</li>
+					<li class="people" id="sanders">Elizabeth B.-N Sanders</li>
 				</ul>
 			</div>
 
 		</div>
 
+
 		<div id="popupDiv" class="parallaxSec">
+			<!-- <div id="titleCol"> 
+			<h1>INFO</h1>
+			</div> -->
 			<div id="col1" class="column">
-				<h4 class="name">Name</h4>
-				<h6>1960-1980</h6>
-				<h6>Field 1, Field 2, etc</h6>
-				<br>
-				<!-- <a href="/images/timeline_sample.pdf" download="newfilename">Resume</a> -->
+				<h4 class="details name" id="name">Name</h4>
+				<h6 class="details" id="years">1960-1980</h6>
+				<h6 class="details" id="fields">Field 1, Field 2, etc</h6>
 			</div>
 			
 			<div id="col2" class="column">
 				<h4>Work</h4>
-				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+				<span id="work">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
 				<h4>Projects</h4>
-				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+				<span id = "projects">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
 			</div>
 
 			<div id="col3" class="column">
 				<h4>Influences</h4>
-				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+				<span id="influences">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
+			</div>
+			<div class="column">
+				<span class="name hovered" id="close">close</span>
 			</div>
 			
 		</div>
