Finished index page
1) Streamlined JSON file read and parsing 2) Populated entire index with
content

--- a/Sandbox/SVGV1/index.html
+++ b/Sandbox/SVGV1/index.html
@@ -55,14 +55,14 @@
 			</div>
 			
 			<div id="col2" class="column">
-				<h4>Work</h4>
+				<h4>Quotes</h4>
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-				<h4>Projects</h4>
+				<h4>About</h4>
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
 			</div>
 
 			<div id="col3" class="column">
-				<h4>Influences</h4>
+				<h4>Connections</h4>
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
 			</div>
 			
