--- a/Mockups/ParallaxV1/crdIndex.html
+++ b/Mockups/ParallaxV1/crdIndex.html
@@ -45,15 +45,15 @@
 					<li class="people" id="linn">Karl Linn</li>
 					<li class="people" id="halprin">Lawrence Halprin</li>
 					<li class="people" id="curry">Rex Curry</li>
-					<li>Architectural Renewal Committee (ARCH) Harlem</li>
-					<li>Asian Neighborhood Design</li>
-					<li>Association for Community Design Inc</li>
+					<li class="organization" id="arch">Architectural Renewal Committee (ARCH) Harlem</li>
+					<li class="organization" id="arc">Asian Neighborhood Design</li>
+					<li class="organization" id="acd">Association for Community Design Inc</li>
 					<li class="people" id="sanoff">Henry Sanoff</li>
 					<li class="people" id="hester">Randolph Hester</li>
 					<li class="people" id="franci">Mark Francis</li>
 					<li class="people" id="hamdi">Nabeel Hamdi</li>
 					<li class="people" id="hou">Jeffry Hou</li>
-					<li>Pacific Rim Community Design Network</li>
+					<li class="organization" id="prcdn">Pacific Rim Community Design Network</li>
 				</ul>
 				
 			</div>
@@ -61,15 +61,15 @@
 			<div class="column">
 				<ul>
 					<li class="people" id="lynch">Kevin Lynch</li>
-					<li class="people" id="hart">Robin Hart</li>
+					<li class="people" id="hart">Roger Hart</li>
 					<li class="people" id="moore">Robin Moore</li>
 					<li class="people" id="chawla">Louise Chawla</li>
 					<li class="people" id="driskell">David Driskell</li>
-					<li>MIG, Inc</li>
-					<li>Convention on the Rights of the Child</li>
-					<li>Local Agenda 21</li>
-					<li>UNICEF Innocenti Research Center</li>
-					<li>Symposium - "Children Participation"</li>
+					<li class="organization" id="miginc">MIG, Inc</li>
+					<li class="organization" id="crtc">Convention on the Rights of the Child</li>
+					<li class="organization" id="la21">Local Agenda 21</li>
+					<li class="organization" id="unicef">UNICEF Innocenti Research Center</li>
+					<li class="organization" id="symposium">Symposium - "Children Participation"</li>
 				</ul>
 			</div>
 
@@ -77,17 +77,17 @@
 				<ul>
 					<li class="people" id="freie">Paulo Freie</li>
 					<li class="people" id="chambers">Robert Chambers</li>
-					<li>Inst. of Development Studies, U.Sussex</li>
-					<li>UN Research Inst. for Social Development (UNRISD)</li>
-					<li>World Bank</li>
-					<li>UN Develpment Programme</li>
-					<li>Donor Organizations (USAID, SIDA, DFID)</li>
-					<li>Intl. Council for Adult Education</li>
-					<li>Society for Participatory Research in Asia (PRIA)</li>
-					<li>Self-Employed Women's Associations, India</li>
-					<li>Grameen Bank</li>
+					<li class="organization" id="sussex">Inst. of Development Studies, U.Sussex</li>
+					<li class="organization" id="unrisd">UN Research Inst. for Social Development (UNRISD)</li>
+					<li class="organization" id="worldbank">World Bank</li>
+					<li class="organization" id="undp">UN Develpment Programme</li>
+					<li class="organization" id="donors">Donor Organizations (USAID, SIDA, DFID)</li>
+					<li class="organization" id="icae">Intl. Council for Adult Education</li>
+					<li class="organization" id="pria">Society for Participatory Research in Asia (PRIA)</li>
+					<li class="organization" id="sewa">Self-Employed Women's Associations, India</li>
+					<li class="organization" id="grameen">Grameen Bank</li>
 					<li class="people" id="fals-borda">Orlando Fals-Borda</li>
-					<li>Orangi Pilot Project OPP-RTI</li>
+					<li class="project" id="opp-rti">Orangi Pilot Project OPP-RTI</li>
 				</ul>
 			</div>
 
@@ -96,20 +96,20 @@
 					<li class="people" id="whyte">William Foote Whyte</li>
 					<li class="people" id="minkler">Meredith Minkler</li>
 					<li class="people" id="wallerstein">Nina Wallerstein</li>
-					<li>Community-Based Participatory Research Program</li>
-					<li>Design Research Society Conference</li>
-					<li>NJMF Project</li>
-					<li>Demos Project</li>
-					<li>DUE Project</li>
-					<li>UTOPIA Project</li>
-					<li>Xerox PARC</li>
-					<li>Florence Project</li>
-					<li>AT Project</li>
-					<li>Computer Professionals for Social Responsibility</li>
-					<li>Participatory Design Conference</li>
-					<li>Public Sphere Project</li>
+					<li class="organization" id="cbpr">Community-Based Participatory Research Program</li>
+					<li class="organization" id="drsconference">Design Research Society Conference</li>
+					<li class="project" id="njmf">NJMF Project</li>
+					<li class="project" id="demos">Demos Project</li>
+					<li class="project" id="due">DUE Project</li>
+					<li class="project" id="utopia">UTOPIA Project</li>
+					<li class="project" id="xerox">Xerox PARC</li>
+					<li class="project" id="florence">Florence Project</li>
+					<li class="project" id="atproject">AT Project</li>
+					<li class="organization" id="cpsr">Computer Professionals for Social Responsibility</li>
+					<li class="organization" id="pdc">Participatory Design Conference</li>
+					<li class="project" id="psp">Public Sphere Project</li>
 					<li class="people" id="ehn">Pelle Ehn</li>
-					<li>Atelier Project</li>
+					<li class="project" id="atelier">Atelier Project</li>
 					<li class="people" id="sanders">Elizabeth B.-N Sanders</li>
 				</ul>
 			</div>
@@ -128,15 +128,15 @@
 			</div>
 			
 			<div id="col2" class="column">
-				<h4>Work</h4>
-				<span id="work">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
-				<h4>Projects</h4>
-				<span id = "projects">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
+				<h4>Quotes</h4>
+				<span id="quotes">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
+				<h4>About</h4>
+				<span id = "aboutPerson">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
 			</div>
 
 			<div id="col3" class="column">
-				<h4>Influences</h4>
-				<span id="influences">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
+				<h4>Connections</h4>
+				<span id="connections">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
 			</div>
 			<div class="column">
 				<span class="name hovered" id="close">close</span>
