Made SVG interactive
Added detail panel capability

--- a/Mockups/ParallaxV1/index.html
+++ b/Mockups/ParallaxV1/index.html
@@ -18,11 +18,19 @@
 <body>
 
 	<nav>
-		<h1><a href="#" id="title">DiPi History Project</a></h1>
+		<div id="titleBar">
 		<ul>
+			<li><h1><a href="#" id="title">DiPi History Project</a></h1></li><br>
+			<li><span id="subtitle">Subtitle</span></li>		
+		</ul>
+			
+		</div>
+		
+		<div id="menu">
+			<ul>
 			
 			<li><a href="#" id="about">about</li>
-			<li><a href="#" id="resources">resources</li>
+			<li><a href="resources.html" id="resources">resources</li>
 			<li><a href="#" id="glossary">glossary</li>
 			<li><a href="crdIndex.html" id="index">index</li>
 			<li></li>
@@ -31,9 +39,10 @@
 			<li><a href="#" id="health">Health</li>
 			<li><a href="#" id="ydev">Youth Development</a></li>
 			<li><a href="#" id="cdev">Community Design</a></li>
-			<li><a href="#" id="info">details</a></li>
 
 		</ul>
+		</div>
+		
 	</nav>
 	
 		
