--- a/Sandbox/SVGV1/index.html
+++ b/Sandbox/SVGV1/index.html
@@ -32,7 +32,6 @@
 			<li><a href="#" id="health">Health</li>
 			<li><a href="#" id="ydev">Youth Development</a></li>
 			<li><a href="#" id="cdev">Community Design</a></li>
-			<li><a href="#" id="info">details</a></li>
 
 		</ul>
 	</nav>
@@ -47,25 +46,25 @@
 
 		<div id="popupDiv" class="parallaxSec">
 			<div id="col1" class="column">
-				<h4 class="name">Saul Alinsky</h4>
-				<h6>1960s to 1990's</h6>
-				<h6>Community Design</h6>
-				<br>
-				<!-- <a href="/images/timeline_sample.pdf" download="newfilename">Resume</a> -->
+				<h4 class="details name" id="name">Name</h4>
+				<h6 class="details" id="years">1960-1980</h6>
+				<h6 class="details" id="fields">Field 1, Field 2, etc</h6>
 			</div>
 			
 			<div id="col2" class="column">
 				<h4>Quotes</h4>
-				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+				<span id="quotes">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
 				<h4>About</h4>
-				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+				<span id = "aboutPerson">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
 			</div>
 
 			<div id="col3" class="column">
 				<h4>Connections</h4>
-				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+				<span id="connections">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
 			</div>
-			
+			<div class="column">
+				<span class="name hovered" id="close">close</span>
+			</div>		
 		</div>
 			
 
