Extended SVG interactivity to the whole document
Plus UI fixes to popup detail panel; Helvetica in SVG

--- a/Mockups/V2_Parallax_SVG/index.html
+++ b/Mockups/V2_Parallax_SVG/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-	<nav>
+	<nav class="shadow_bottom">
 		<h1><a href="#" id="title">DiPi History Project</a></h1>
 		<ul>
 			
@@ -30,39 +30,53 @@
 
 			<li></li>
 			<li></li>
-			<li><a href="#" id="itc">ITC</li>
-			<li><a href="#" id="health">Health</li>
-			<li><a href="#" id="ydev">Youth Development</a></li>
-			<li><a href="#" id="cdev">Community Design</a></li>
+			<li><a href="#" id="tech">technology</a></li>
+			<li><a href="#" id="health">health</a></li>
+			<li><a href="#" id="iDev">international</a></li>
+			<li><a href="#" id="ydev">youth</a></li>
+			<li><a href="#" id="cdev">community</a></li>
 
 		</ul>
 	</nav>
 
 	<div id="content">
+
+		<div id="intro" class="parallaxSec">	
+			<h1>INTRO</h1>	
+			<div class="column">
+				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, ngilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc
+			</div>
+		</div>
 		
 		<svg version="1.1" id="paper" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="1301.52px" height="2107.834px" viewBox="0 0 1301.52 2107.834" enable-background="new 0 0 1301.52 2107.834"
 	 xml:space="preserve">
-			<!-- <g id="Years"></g> -->
 		</svg>
 
-		<div id="popupDiv" class="parallaxSec">
+		<div id="popupDiv" class="parallaxSec shadow_top">
 			<div id="col1" class="column">
-				<h4 class="details name" id="name">Name</h4>
+				<h2 class="details name" id="name">Name</h2>
 				<h6 class="details" id="years">1960-1980</h6>
 				<h6 class="details" id="fields">Field 1, Field 2, etc</h6>
+			</div>
+
+			<div class="column">
+				<h4>Introduction</h4>
+				<span id="aboutPerson">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
 			</div>
 			
 			<div id="col2" class="column">
 				<h4>Quotes</h4>
 				<span id="quotes">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
-				<h4>About</h4>
-				<span id = "aboutPerson">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
+				<h4>Connections</h4>
+				<span id="connections">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
 			</div>
 
 			<div id="col3" class="column">
-				<h4>Connections</h4>
-				<span id="connections">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
+				<h4>Key Publications</h4>
+				<span id="publications">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
+				<h4>Reference</h4>
+				
 			</div>
 			<div class="column">
 				<span class="name hovered" id="close">close</span>
