UI change to detail panel
Also layout of resources

--- a/Mockups/V2_Parallax_SVG/crdIndex.html
+++ b/Mockups/V2_Parallax_SVG/crdIndex.html
@@ -22,7 +22,7 @@
 		<ul>
 			
 			<li><a href="#" id="about">about</li>
-			<li><a href="#" id="resources">resources</li>
+			<li><a href="resources.html" id="resources">resources</li>
 			<li><a href="#" id="glossary">glossary</li>
 			<li></li>
 			<li></li>
