--- a/Mockups/V2_Parallax_SVG/index.html
+++ b/Mockups/V2_Parallax_SVG/index.html
@@ -47,10 +47,10 @@
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, ngilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc
 			</div>
 		</div>
-		
-		<svg version="1.1" id="paper" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+		<div id="wrapper"><svg version="1.1" id="paper" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="1301.52px" height="2107.834px" viewBox="0 0 1301.52 2107.834" enable-background="new 0 0 1301.52 2107.834"
-	 xml:space="preserve">
+	 xml:space="preserve"></div>
+		
 		</svg>
 
 		<div id="popupDiv" class="parallaxSec shadow_top">
@@ -78,8 +78,11 @@
 				<h4>Reference</h4>
 				
 			</div>
-			<div class="column">
-				<span class="name hovered" id="close">close</span>
+			<div class="column" id="col4">
+				<span class="name hovered" id="close"><img src="materials/arrow_white.png"></span>
+				<span id="globe">
+					<img src="">
+				</span>
 			</div>		
 		</div>
 			
