--- a/Mockups/V2_Parallax_SVG/resources.html
+++ b/Mockups/V2_Parallax_SVG/resources.html
@@ -21,9 +21,10 @@
 		<h1><a href="#" id="title">Resources</a></h1>
 		<ul>
 			
-			<li><a href="crdIndex.html" id="index">index</li>
+			
 			<li><a href="#" id="about">about</li>
 			<li><a href="#" id="glossary">glossary</li>
+			<li><a href="crdIndex.html" id="index">index</li>
 			<li></li>
 			<li></li>
 			<li><a href="index.html" id="home">home</a></li>
@@ -35,10 +36,42 @@
 	<section id="wrapper">
 		<div id="content">
 
-			<h1 class="section">Poster</h1>
-			<a href="file:///C:\Users\Sumayyah\Documents\GitHub\DiPi-Dataviz\Mockups\ParallaxV1\images\community_design.png" download>Download!</a>
-			<h1 class="section">Data</h1>
-			<h1 class="section">Publications</h1>
+			<h1 class="section">poster</h1>
+
+				<ul>
+					<li><a href="file:///C:\Users\Sumayyah\Documents\GitHub\DiPi-Dataviz\Mockups\ParallaxV1\images\community_design.png" download><img src="materials/poster_screenshot_thumbnail.png" ></a></li>
+					<li><img src="materials/poster_screenshot_thumbnail.png"></li>
+					<li><img src="materials/poster_screenshot_thumbnail.png"></li>
+
+				</ul>
+			<h1 class="section">data</h1>
+				<ul>
+					<li><img src="materials/sublime_screenshot_thumbnail.png"></li>
+					<li><img src="materials/sublime_screenshot_thumbnail.png"></li>
+					<li><img src="materials/sublime_screenshot_thumbnail.png"></li>
+				</ul>
+			
+			<h1 class="section">publications</h1>
+				<ul>
+					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
+					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
+					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
+					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
+					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
+					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
+					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
+					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
+					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
+					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
+					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
+					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
+					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
+					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
+					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
+					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
+					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
+					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
+				</ul>
 		</div>
 
 
@@ -48,6 +81,4 @@
 		</footer> -->	
 	
 	</section>
-
-
 </body>
