--- a/Mockups/V2_Parallax_SVG/crdIndex.html
+++ b/Mockups/V2_Parallax_SVG/crdIndex.html
@@ -169,31 +169,37 @@
 		</div>
 
 
-		<div id="popupDiv" class="parallaxSec">
-			<!-- <div id="titleCol"> 
-			<h1>INFO</h1>
-			</div> -->
+				<div id="popupDiv" class="parallaxSec shadow_top">
 			<div id="col1" class="column">
-				<h4 class="details name" id="name">Name</h4>
+				<h2 class="details name" id="name">Name</h2>
 				<h6 class="details" id="years">1960-1980</h6>
 				<h6 class="details" id="fields">Field 1, Field 2, etc</h6>
+			</div>
+
+			<div class="column">
+				<h4>Introduction</h4>
+				<span id="aboutPerson">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
 			</div>
 			
 			<div id="col2" class="column">
 				<h4>Quotes</h4>
 				<span id="quotes">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
-				<h4>About</h4>
-				<span id = "aboutPerson">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
-			</div>
-
-			<div id="col3" class="column">
 				<h4>Connections</h4>
 				<span id="connections">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
 			</div>
-			<div class="column">
-				<span class="name hovered" id="close">close</span>
+
+			<div id="col3" class="column">
+				<h4>Key Publications</h4>
+				<span id="publications">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
+				<h4>Reference</h4>
+				
 			</div>
-			
+			<div class="column" id="col4">
+				<span class="name hovered" id="close"><img src="materials/arrow_white.png"></span>
+				<span id="globe">
+					<img src="">
+				</span>
+			</div>		
 		</div>
 <!-- 		<footer>
 			Copyright 2014
