--- a/Mockups/V2_Parallax_SVG/resources.html
+++ b/Mockups/V2_Parallax_SVG/resources.html
@@ -44,34 +44,17 @@
 					<li><img src="materials/poster_screenshot_thumbnail.png"></li>
 
 				</ul>
+
+			<hr class="separator">
 			<h1 class="section">data</h1>
 				<ul>
 					<li><img src="materials/sublime_screenshot_thumbnail.png"></li>
 					<li><img src="materials/sublime_screenshot_thumbnail.png"></li>
 					<li><img src="materials/sublime_screenshot_thumbnail.png"></li>
 				</ul>
-			
+			<hr class="separator">
 			<h1 class="section">publications</h1>
-				<ul>
-					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
-					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
-					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
-					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
-					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
-					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
-					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
-					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
-					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
-					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
-					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
-					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
-					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
-					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
-					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
-					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
-					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
-					<li><img src="materials/pdf_screenshot_thumbnail.png"></li>
-				</ul>
+				
 		</div>
 
 
