--- a/Mockups/V2_Parallax_SVG/crdIndex.html
+++ b/Mockups/V2_Parallax_SVG/crdIndex.html
@@ -4,6 +4,7 @@
 
 <head>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+	<script src="sweet-justice.min.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:400,600,700|Rosario:400italic,400,700italic,700|Open+Sans:100,300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -74,7 +75,7 @@
 				<ul>
                     <li class="people" id="fals-borda">Fals-Borda, Orlando</li>
 					<li class="project" id="florence">Florence Project</li>
-					<li class="people" id="franci">Francis, Mark</li>
+					<li class="people" id="francis">Francis, Mark</li>
 					<li class="people" id="freie">Freie, Paulo</li>
 					<li class="organization" id="grameen">Grameen Bank</li>
                     <li class="organization" id="guc1">Growing Up in Cities 1977 to 1980s</li>
@@ -146,32 +147,32 @@
 		</div>
 
 
-				<div id="popupDiv" class="parallaxSec shadow_top">
-			<div id="col1" class="column">
+		<div id="popupDiv" class="parallaxSec">
+			<div id="col1" class="column sweet-justice">
 				<h2 class="details name" id="name">Name</h2>
 				<h6 class="details" id="years">1960-1980</h6>
 				<h6 class="details" id="fields">Field 1, Field 2, etc</h6>
 			</div>
 
-			<div class="column">
+			<div class="column sweet-justice">
 				<h4>Introduction</h4>
-				<span id="aboutPerson">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
+				<span id="aboutPerson"></span>
 			</div>
 			
-			<div id="col2" class="column">
+			<div id="col2" class="column sweet-justice">
 				<h4>Quotes</h4>
-				<span id="quotes">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
+				<span id="quotes"></span>
 				<h4>Connections</h4>
-				<span id="connections">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
+				<span id="connections"></span>
 			</div>
 
-			<div id="col3" class="column">
+			<div id="col3" class="column sweet-justice">
 				<h4>Key Publications</h4>
-				<span id="publications">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
+				<span id="publications"></span>
 				<h4>Reference</h4>
 				
 			</div>
-			<div class="column" id="col4">
+			<div class="column sweet-justice" id="col4">
 				<span class="name hovered" id="close"><img src="materials/arrow.png"></span>
 				<span id="globe">
 					<img src="">
