--- a/Mockups/V2_Parallax_SVG/resources.html
+++ b/Mockups/V2_Parallax_SVG/resources.html
@@ -57,6 +57,15 @@
 				</ul>
 			<hr class="separator">
 			<h1 class="section">publications</h1>
+			Alinsky, S. D. (1972). Rules for radicals: A primer for realistic radicals.  
+An Architektur. (2008). Community Design. Involvement and Architecture in the US since 1963. Projects  
+An Architektur. (2008). Community Design. Involvement and Architecture in the US since 1963. Public Interview
+Arnstein, S. R. (1969). A ladder of citizen participation. Journal of the American Institute of planners, 35(4), 216-224. 
+Atwood, J. B. (1993, November). Statement of principles on participatory development. In Washington, DC: Address presented at Academy for Educational Development, USAID Forum on Participatory Development, November (Vol. 16).   
+Bjerknes, G., Ehn, P., & Kyng, M. (1987). Computers and democracy-a Scandinavian challenge. Gower Publishing Ltd.  
+Bødker, et al (2000, October). Co-operative Design—perspectives on 20 years with ‘the Scandinavian IT Design Model’. In Proceedings of NordiCHI (Vol. 2000, pp. 22-24). University of Notre Dame.
+Bødker, S. (1996). Creating conditions for participation: Conflicts and resources in systems development. Human-computer interaction, 11(3), 215-236. 
+Bornstein, D. (1996). The price of a dream. The story of the Grameen Bank and the idea that is helping the poor to change their lives.  
 				
 		</div>
 
