--- a/Mockups/V2_Parallax_SVG/index.html
+++ b/Mockups/V2_Parallax_SVG/index.html
@@ -5,6 +5,7 @@
 <head>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script src="snap.svg-min.js"></script>
+	<script src="sweet-justice.min.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:400,600,700|Rosario:400italic,400,700italic,700|Open+Sans:100,300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -44,11 +45,11 @@
 		<div id="intro" class="parallaxSec">	
 			<h1>PARTICIPATORY DESIGN</h1>	
 			<div id="introText"> 
-				<div class="column">
-				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, ngilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc
+				<div class="column sweet-justice">
+				DiPi History project is a joint effort between researchers, practitioners, and students to explore the evolution of participatory approaches overtime. A participatory approach is one in which everyone who has a stake in the intervention has a voice and influence through collaboration with practitioners and researchers. Under the collaborative effort, we investigated who and what have contributed to the evolution of participatory approaches overtime. Based on the research, we made a timeline that identifies key individuals, organizations, projects, and social events that influence the evolution of participatory approaches across five different fields. The fields include community design, youth development, international development, public health, and technology development.
 			</div>
-				<div class="column">
-				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, ngilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc
+				<div class="column sweet-justice">
+				We made this website in response to the growing needs among researchers and practitioners implanting participatory approaches. We hope that the timeline, groceries, and other resources help existing and future experts learn the evolution of participatory approaches. To explore the essence of collaborative works, we also documented and opened the process of collaborations as a resource for future collaborative projects. Please feel free to download and use these resources.
 			</div>
 			</div>
 			
@@ -60,31 +61,30 @@
 		</svg>
 
 		<div id="popupDiv" class="parallaxSec shadow_top">
-			<div id="col1" class="column">
+			<div id="col1" class="column sweet-justice">
 				<h2 class="details name" id="name">Name</h2>
 				<h6 class="details" id="years">1960-1980</h6>
 				<h6 class="details" id="fields">Field 1, Field 2, etc</h6>
 			</div>
 
-			<div class="column">
+			<div class="column sweet-justice">
 				<h4>Introduction</h4>
-				<span id="aboutPerson">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
+				<span id="aboutPerson"></span>
 			</div>
 			
-			<div id="col2" class="column">
+			<div id="col2" class="column sweet-justice">
 				<h4>Quotes</h4>
-				<span id="quotes">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
-				<h4>Connections</h4>
-				<span id="connections">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
+				<span id="quotes"></h4>
+				<span id="connections"></span>
 			</div>
 
-			<div id="col3" class="column">
+			<div id="col3" class="column sweet-justice">
 				<h4>Key Publications</h4>
-				<span id="publications">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
+				<span id="publications"></span>
 				<h4>Reference</h4>
 				
 			</div>
-			<div class="column" id="col4">
+			<div class="column sweet-justice" id="col4">
 				<span class="name hovered" id="close"><img src="materials/arrow.png"></span>
 				<span id="globe">
 					<img src="">
