Added glossary and structure
Fixed inconsistencies in index and homepage

--- a/Mockups/V2_Parallax_SVG/index.html
+++ b/Mockups/V2_Parallax_SVG/index.html
@@ -25,7 +25,7 @@
 		<ul>
 			
 			<li><a href="#" id="about">about</li>
-			<li><a href="#" id="glossary">glossary</li>
+			<li><a href="glossary.html" id="glossary">glossary</li>
 			<li><a href="resources.html" id="resources">resources</li>
 			<li><a href="crdIndex.html" id="index">index</li>
 
@@ -61,7 +61,7 @@
 		</svg>
 
 		<div id="popupDiv" class="parallaxSec shadow_top">
-			<div id="col1" class="column sweet-justice">
+			<div id="col1" class="column">
 				<h2 class="details name" id="name">Name</h2>
 				<h6 class="details" id="years">1960-1980</h6>
 				<h6 class="details" id="fields">Field 1, Field 2, etc</h6>
